@@ -1,6 +1,6 @@
 Package: Matrix
-Version: 0.99-6
-Date: 2006-01-08
+Version: 0.99-7
+Date: 2006-01-10
 Title: A Matrix package for R
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
